Improved stability and campaign enhancements
git-svn-id: file://localhost/Users/Andrew/Desktop/cvs/svn-repos/mailer@4 7de7f779-dff4-4d10-bb37-8391ec24c40e

--- a/mailer.css
+++ b/mailer.css
@@ -12,6 +12,10 @@
 	color: #FFF;
 }
 
+#mailerSearch {
+	width: 50%;
+	padding: 10px;
+}
 
 
 /* http://www.alistapart.com/articles/accessibledatavisualization */
