--- a/mailer.css
+++ b/mailer.css
@@ -49,12 +49,22 @@
 	color: white;
 }
 
-.mailerSearchSubmit:hover, .createButton:hover {
+.backButton {
+	padding: 15px;
+	text-decoration: none;
+	font-weight: bold;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+	background-color: #d97408;
+	color: white;
+}
+
+.mailerSearchSubmit:hover, .createButton:hover, .backButton:hover {
 	color: white;
 	background-color: #ea8508;
 }
 
-.mailerSearchSubmit:active, .createButton:active {
+.mailerSearchSubmit:active, .createButton:active, .backButton:active {
 	color: #f38e09;
 	background-color: #ca6507;
 }
