--- a/mailer.css
+++ b/mailer.css
@@ -3,6 +3,37 @@
 	min-height: 600px;
 }
 
+.templateLeft {
+	float: left;
+}
+
+.templateRight {
+	float: right;
+}
+
+#campaignList {
+	margin: 1em;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+	float: left;
+	text-align: center;
+	padding: 2em;
+	border-width: 1px;
+	border-style: solid;
+	border-color: white;
+}
+
+#campaignList a {
+	text-decoration: none;
+}
+
+#campaignList:hover {
+	background-color: #f5f5f5;
+	border-width: 1px;
+	border-style: solid;
+	border-color: #dddddd;
+}
+
 .plainText {
 	font-size: 1.2em;
 }
@@ -60,6 +91,27 @@
 	border: none;
 }
 
+.templateButton {
+	text-decoration: none;
+	font-weight: bold;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+	background-color: #d97408;
+	color: white;
+	padding: 10px;
+}
+
+.campaignContinue {
+	border: none;
+	text-decoration: none;
+	font-weight: bold;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+	background-color: #d97408;
+	color: white;
+	padding: 10px;
+}
+
 .createButton {
 	text-decoration: none;
 	font-weight: bold;
@@ -79,12 +131,12 @@
 	color: white;
 }
 
-.mailerSearchSubmit:hover, .createButton:hover, .backButton:hover {
+.mailerSearchSubmit:hover, .createButton:hover, .backButton:hover, .templateButton:hover, .campaignContinue:hover {
 	color: white;
 	background-color: #ea8508;
 }
 
-.mailerSearchSubmit:active, .createButton:active, .backButton:active {
+.mailerSearchSubmit:active, .createButton:active, .backButton:active, .templateButton:active, .campaignContinue:active {
 	color: #f38e09;
 	background-color: #ca6507;
 }
